[package]
name = "myls"
version = "1.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
users = "0.11"

[profile.release]
strip = "debuginfo" # Small size, but keeping stacktrace
# strip = true  # Strip everything (smallest size, no stacktrace)
